[package]
name = "minimal-rust-km"
version = "0.1.0"
authors = ["Clemens Tiedt <clemenstiedt@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ext2rs"
crate-type = ["staticlib"]

[dependencies]
lazy_static = {version = "1.4", features = ["spin_no_std"]}
spin = "0.5"